# python-router-dlink-dir822

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
router_dlink_dir822/: __init__.py  __main__.py  cli.py  device_dlink_dir822.py
scripts/: install.sh  launch.sh  launch_shell.sh.sample
