# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = router_dlink_dir822
version = 0.1.0
author = Jingl3s
author_email = Jingl3s
description = Python clients for DLINK DIR-822 router HNAP devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jingl3s/python-router-dlink_dir822
project_urls =
    Bug Tracker = https://github.com/jingl3s/python-router-dlink_dir822/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    router_dlink_dir822 = router_dlink_dir822
packages = find:
python_requires = >=3.5
install_requires =
   hanp@git+https://github.com/ldotlopez/python-hnap

[options.packages.find]
where =

[options.entry_points]
console_scripts =
    router_dlink_dir822 = router_dlink_dir822.cli:main
